fix: resolve video player and subtitle issues
🎬 Video Player Fixes:
- Add enhanced video player with proper seek/rewind controls
- Fix video jumping and end-of-video glitches
- Add fullscreen support with keyboard controls (SPACE, ESCAPE)
- Improve cross-browser compatibility

📝 Subtitle Synchronization:
- Fix subtitles running ahead of audio (increased delay to 2.5s)
- Remove markdown headers from subtitles and audio
- Enhanced markdown cleaning with pattern recognition
- Prevent title phrases like '**The Fairy Tale of...**' from being read

🎯 Content Generation:
- Improve Azure OpenAI prompts to prevent markdown titles
- Add specific historical facts with dates and names
- Enhanced image search with contextual keywords (8 images)
- Better educational content quality

🔧 Technical Improvements:
- Add favicon support for both apps
- Optimize Docker builds with .dockerignore files
- Real-time progress tracking during generation
- Better error handling and logging

🚀 Performance:
- Fast development setup with dev-fast.sh
- Multi-stage Docker builds
- Improved dependency management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 # docker-compose for WiseTale full stack
-version: '3.8'
 
 services:
   backend:
-    build: ./wisetale-api
+    build: 
+      context: ./wisetale-api
+      target: base
     container_name: wisetale-backend
     env_file:
       - ./wisetale-api/.env
@@ -16,25 +17,29 @@ services:
       - ./wisetale-api:/app
 
   frontend:
-    build: ./wisetale-app
+    build: 
+      context: ./wisetale-app
+      target: dev
     container_name: wisetale-frontend
     ports:
-      - "3000:3000"
+      - "3001:3001"
     volumes:
       - ./wisetale-app:/app
     command: npm run dev
 
   landing:
-    build: ./wisetale-landing
+    build: 
+      context: ./wisetale-landing
+      target: dev
     container_name: wisetale-landing
     ports:
-      - "3001:3000"
+      - "3000:3000"
     volumes:
       - ./wisetale-landing:/app
     command: npm run dev
 
   redis:
-    image: redis:7
+    image: redis:7-alpine
     container_name: wisetale-redis
     ports:
       - "6379:6379" 
