--- a/wisetale-app/package.json
+++ b/wisetale-app/package.json
@@ -47,7 +47,7 @@
     "input-otp": "1.4.1",
     "next": "14.2.16",
     "react": "^18",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.0.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
