--- a/wisetale-app/package.json
+++ b/wisetale-app/package.json
@@ -54,16 +54,16 @@
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
-        "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1",
+    "lucide-react": "^0.522.0",
+    "next-themes": "^0.4.6"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
     "@types/node": "^22.15.32",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18",
-    "lucide-react": "^0.522.0",
-    "next-themes": "^0.4.6",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
