fix: increase API timeouts for video generation
- Set 5-minute timeout for proxy API calls
- Configure maxDuration 300s for Vercel functions
- Fixes timeout issues during video generation

--- a/wisetale-app/vercel.json
+++ b/wisetale-app/vercel.json
@@ -17,6 +17,10 @@
   "functions": {
     "app/api/health/route.ts": {
       "memory": 128
+    },
+    "app/api/proxy/[...path]/route.ts": {
+      "memory": 512,
+      "maxDuration": 300
     }
   },
   "headers": [
