--- a/wisetale-api/pyproject.toml
+++ b/wisetale-api/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.110.0",
     "uvicorn>=0.27.1",
     "pydantic>=2.6.3",
+    "email-validator>=2.0.0",
     "requests>=2.31.0",
     "redis>=5.0.1",
     "firebase-admin>=6.5.0",
