chore: remove .pnpm-store and update .gitignore to prevent large files in repo

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,12 @@ next-env.d.ts
 backups/
 test.zip
 *.zip
+node_modules/
+.pnpm-store/
+*.env
+venv/
+.venv/
+__pycache__/
+*.pyc
+generated_audio/
+generated_videos/
