fix(vercel): add rewrites for api proxy and fix paths

--- a/wizetale-app/vercel.json
+++ b/wizetale-app/vercel.json
@@ -49,5 +49,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://www.wizetale.com/api/:path*"
+    }
   ]
 } 
