fix(vercel): use http for api rewrite to fix 502 error

--- a/wizetale-app/vercel.json
+++ b/wizetale-app/vercel.json
@@ -53,7 +53,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://138.197.191.222/api/:path*"
+      "destination": "http://138.197.191.222/api/:path*"
     }
   ]
 } 
