--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -4,7 +4,7 @@ server {
 
     # Vercel sends requests to /api/, proxy them to the backend
     location /api/ {
-        proxy_pass http://127.0.0.1:8000; # Pass to backend service running on the host
+        proxy_pass http://backend:8000; # Pass to backend service (name from docker-compose)
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +29,7 @@ server {
 
     # Proxy API requests to the backend
     location /api/ {
-        proxy_pass http://127.0.0.1:8000; # Pass to backend service
+        proxy_pass http://backend:8000; # Pass to backend service (name from docker-compose)
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,9 +37,8 @@ server {
         proxy_set_header x-api-key $http_x_api_key;
     }
 
-    # For everything else, show a simple "ok" or redirect to the main site
+    # For everything else, redirect to the main site
     location / {
-        # This can be a redirect to your frontend app
         return 301 https://www.wizetale.com;
     }
 } 
