--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,141 +1,52 @@
-# Production docker-compose for Wizetale
-# Optimized for performance, security, and scalability
-
 services:
-  # Backend API Service
   backend:
     build:
       context: ./wizetale-api
-      target: production
-      args:
-        BUILDKIT_INLINE_CACHE: 1
-    image: wizetale-backend:latest
     container_name: wizetale-backend-prod
-    restart: unless-stopped
-    environment:
-      - ENVIRONMENT=production
-      - REDIS_URL=redis://redis:6379
     env_file:
       - ./wizetale-api/.env
-    # Remove direct port exposure - nginx will handle it
-    # ports:
-    #   - "8000:8000"
+    restart: unless-stopped
     depends_on:
       - redis
     networks:
-      - wizetale-network
+      - wizetale_net
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
-    deploy:
-      resources:
-        limits:
-          cpus: '1.0'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 512M
+      start_period: 20s
 
-  # Main App Service
-  frontend:
-    build:
-      context: ./wizetale-app
-      target: production
-      args:
-        BUILDKIT_INLINE_CACHE: 1
-    image: wizetale-frontend:latest
-    container_name: wizetale-frontend-prod
-    restart: unless-stopped
-    environment:
-      - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://backend:8000
-    env_file:
-      - ./wizetale-app/.env
-    # Remove direct port exposure - nginx will handle it
-    # ports:
-    #   - "3001:3001"
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx-prod.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - backend
     networks:
-      - wizetale-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 512M
-        reservations:
-          cpus: '0.25'
-          memory: 256M
+      - wizetale_net
 
-  # Redis Cache Service
   redis:
-    image: redis:7-alpine
+    image: redis:alpine
     container_name: wizetale-redis-prod
     restart: unless-stopped
-    # Remove direct port exposure for security
-    # ports:
-    #   - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
-      - wizetale-network
+      - wizetale_net
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 10s
       retries: 3
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 256M
-        reservations:
-          cpus: '0.25'
-          memory: 128M
-    command: redis-server --appendonly yes --maxmemory 128mb --maxmemory-policy allkeys-lru
-
-  # Nginx Load Balancer
-  nginx:
-    image: nginx:alpine
-    container_name: wizetale-nginx-prod
-    restart: unless-stopped
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-      - "80:80"
-      - "443:443"  # For HTTPS
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - wizetale-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    deploy:
-      resources:
-        limits:
-          cpus: '0.25'
-          memory: 128M
-        reservations:
-          cpus: '0.1'
-          memory: 64M
 
 volumes:
   redis_data:
-    driver: local
 
 networks:
-  wizetale-network:
+  wizetale_net:
     driver: bridge 
