--- a/wizetale-api/pyproject.toml
+++ b/wizetale-api/pyproject.toml
@@ -5,19 +5,22 @@ description = "AI-powered educational video generation API"
 readme = {text = "Wizetale API - AI-powered educational video generation", content-type = "text/plain"}
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi>=0.110.0",
-    "uvicorn>=0.27.1",
-    "pydantic>=2.6.3",
-    "celery[redis]>=5.4.0",
-    "email-validator>=2.0.0",
-    "requests>=2.31.0",
-    "redis>=5.0.1",
-    "firebase-admin>=6.5.0",
-    "ffmpeg-python>=0.2.0",
-    "openai>=1.51.2",
-    "azure-cognitiveservices-speech>=1.40.0",
-    "python-dotenv>=1.1.1",
-    "pydantic-settings>=2.0.0",
+    "fastapi",
+    "uvicorn",
+    "pydantic",
+    "python-dotenv",
+    "celery[redis]",
+    "requests",
+    "google-cloud-aiplatform",
+    "google-cloud-storage",
+    "google-cloud-videointelligence",
+    "google-cloud-texttospeech",
+    "moviepy",
+    "pillow",
+    "python-pexels",
+    "firebase-admin",
+    "slowapi",
+    "pydantic-settings"
 ]
 
 [project.optional-dependencies]
