--- a/wizetale-api/pyproject.toml
+++ b/wizetale-api/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "python-pexels",
     "firebase-admin",
     "slowapi",
-    "pydantic-settings"
+    "pydantic-settings",
+    "openai",
+    "azure-identity"
 ]
 
 [project.optional-dependencies]
