fix(deploy): add speech sdk and disable nginx ssl

--- a/wizetale-api/pyproject.toml
+++ b/wizetale-api/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "slowapi",
     "pydantic-settings",
     "openai",
-    "azure-identity"
+    "azure-identity",
+    "azure-cognitiveservices-speech"
 ]
 
 [project.optional-dependencies]
