--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -22,8 +22,8 @@ server {
     listen 443 ssl;
     server_name wizetale.com www.wizetale.com;
 
-    ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
     # include /etc/letsencrypt/options-ssl-nginx.conf; # This file may not exist, commenting out
     # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # This file may not exist, commenting out
 
