--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -19,7 +19,7 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    # listen 443 ssl;
     server_name wizetale.com www.wizetale.com;
 
     # ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
