fix(backend): use async redis and fastapi depends for robust healthcheck

--- a/wizetale-api/pyproject.toml
+++ b/wizetale-api/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "uvicorn",
     "pydantic",
     "python-dotenv",
-    "celery[redis]",
+    "celery",
+    "redis[async]",
     "requests",
     "google-cloud-aiplatform",
     "google-cloud-storage",
