--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -4,7 +4,7 @@ server {
 
     # Vercel sends requests to /api/, proxy them to the backend
     location /api/ {
-        proxy_pass http://backend:8000/api/; # Pass to backend service (name from docker-compose)
+        proxy_pass http://backend:8000/; # Pass to backend service, stripping /api/
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
