--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -2,34 +2,42 @@ server {
     listen 80;
     server_name wizetale.com www.wizetale.com 138.197.191.222;
 
-    # Vercel sends requests to /api/, proxy them to the backend
+    # Handle Vercel's API requests
     location /api/ {
-        proxy_pass http://backend:8000/; # Correctly strip /api prefix
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header x-api-key $http_x_api_key; # Use standard lowercase header
+        proxy_set_header x-api-key $http_x_api_key;
     }
 
-    # Redirect all other HTTP traffic to HTTPS
+    # Redirect all other HTTP traffic to HTTPS for users browsing directly
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name wizetale.com www.wizetale.com;
 
     ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    # Strong SSL security settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+
+    # This location is for direct access to the domain, not used by Vercel proxy
     location / {
-        # This location is for direct access to the domain, not used by Vercel proxy
-        # You can configure it to serve a static page or redirect
-        return 404; # Or redirect to https://www.wizetale.com
+        # This can be a static "Coming Soon" page or redirect to your company's main site
+        # For now, returning a simple 404 is fine.
+        return 404;
     }
 } 
