--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,19 +11,19 @@ services:
     networks:
       - wizetale_net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 20s
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx # Use our custom Dockerfile for Nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx-prod.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - backend
