--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,10 +24,13 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ./nginx/nginx-prod.conf:/etc/nginx/conf.d/default.conf
       # Mount the entire letsencrypt directory to provide access to all cert files
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy # Wait for backend to be healthy
+    restart: always
     networks:
       - wizetale_net
 
