fix(vercel): remove /api from rewrite destination to fix routing

--- a/wizetale-app/vercel.json
+++ b/wizetale-app/vercel.json
@@ -44,7 +44,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "http://138.197.191.222/api/:path*"
+      "destination": "http://138.197.191.222/:path*"
     }
   ]
 } 
