--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -1,13 +1,36 @@
 server {
     listen 80;
-    server_name _;
+    server_name wizetale.com www.wizetale.com;
+
+    # Redirect all HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name wizetale.com www.wizetale.com;
+
+    ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
 
     location /api/ {
-        proxy_pass http://backend:8000/;
+        proxy_pass http://backend:8000; # Pass to backend container
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header x-api-key $http_x_api_key;
+        proxy_set_header x-api-key $http_x_api_key; # Pass the API key
+    }
+
+    # Optional: You can add a default location block for the root path
+    # to serve a static page or return a specific status.
+    location / {
+        # Example: return a simple 200 OK for health checks or monitoring
+        return 200 'Server is running.';
+        add_header Content-Type text/plain;
     }
 } 
