fix(nginx): comment out missing ssl options file

--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -14,7 +14,7 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
+    # include /etc/letsencrypt/options-ssl-nginx.conf; # This file may not exist, comment out for safety
     ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
 
     location /api/ {
