--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -1,14 +1,16 @@
 server {
     listen 80;
     server_name _;
-
+    # Allow underscores in headers for better compatibility
+    underscores_in_headers on;
     location /api/ {
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header x-api-key $http_x_api_key;
+        # Pass the original header from the client
+        proxy_set_header X-API-KEY $http_x_api_key;
     }
 
     location / {
