--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -9,8 +9,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # Pass the original header from the client
-        proxy_set_header X-API-KEY $http_x_api_key;
+        # Pass the simplified apikey header
+        proxy_set_header apikey $http_apikey;
     }
 
     location / {
