--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -4,6 +4,9 @@ server {
     # Allow underscores in headers for better compatibility
     underscores_in_headers on;
     location /api/ {
+        # Add a debug header to the response to see if Nginx receives the apikey
+        add_header X-Debug-ApiKey-Received "$http_apikey" always;
+
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
