fix(system): standardize on X-API-KEY header across all services

--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -4,16 +4,12 @@ server {
     # Allow underscores in headers for better compatibility
     underscores_in_headers on;
     location /api/ {
-        # Add a debug header to the response to see if Nginx receives the apikey
-        add_header X-Debug-ApiKey-Received "$http_apikey" always;
-
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # Pass the simplified apikey header
-        proxy_set_header apikey $http_apikey;
+        proxy_set_header X-API-KEY $http_x_api_key;
     }
 
     location / {
