--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,56 +1,40 @@
+version: '3.8'
+
 services:
   backend:
     build:
       context: ./wizetale-api
+      dockerfile: Dockerfile
+    image: wizetale-backend-prod
     container_name: wizetale-backend-prod
+    restart: always
     env_file:
       - ./wizetale-api/.env
-    restart: unless-stopped
-    depends_on:
-      - redis
     networks:
-      - wizetale_net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
+      - wizetale-network
+
+  frontend:
+    build:
+      context: ./wizetale-app
+      dockerfile: Dockerfile.prod
+    image: wizetale-frontend-prod
+    container_name: wizetale-frontend-prod
+    restart: always
+    networks:
+      - wizetale-network
 
   nginx:
-    build:
-      context: ./nginx # Use our custom Dockerfile for Nginx
+    image: nginx:1.25-alpine
+    container_name: wizetale-nginx-prod
+    restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx-prod.conf:/etc/nginx/conf.d/default.conf
-      # Mount the entire letsencrypt directory to provide access to all cert files
+      - ./nginx-prod.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
-      backend:
-        condition: service_healthy # Wait for backend to be healthy
-    restart: always
+      - backend
+      - frontend
     networks:
-      - wizetale_net
-
-  redis:
-    image: redis:alpine
-    container_name: wizetale-redis-prod
-    restart: unless-stopped
-    volumes:
-      - redis_data:/data
-    networks:
-      - wizetale_net
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-volumes:
-  redis_data:
-
-networks:
-  wizetale_net:
-    driver: bridge 
+      - wizetale-network 
