--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -1,18 +1,48 @@
 server {
     listen 80;
-    server_name _;
-    # Allow underscores in headers for better compatibility
-    underscores_in_headers on;
+    server_name wizetale.com www.wizetale.com;
+
+    location / {
+        proxy_pass http://frontend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /api/ {
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-API-KEY $http_x_api_key;
+        proxy_set_header X-API-KEY ${API_KEY};
     }
+}
 
-    location / {
-        return 404; # Should not be accessed directly
-    }
-} 
+# server {
+#     listen 443 ssl;
+#     server_name wizetale.com www.wizetale.com;
+
+#     ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+#     location / {
+#         proxy_pass http://frontend;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     location /api/ {
+#         proxy_pass http://backend:8000/;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-API-KEY ${API_KEY};
+#     }
+# } 
