--- a/wizetale-app/Dockerfile
+++ b/wizetale-app/Dockerfile
@@ -50,17 +50,13 @@ COPY . .
 # Build the Next.js application
 RUN npm run build
 
-
-# --- Final Production Stage ---
-# This is the final, lean image for production.
-FROM base as prod
+# Production stage
+FROM node:18-alpine AS production
 WORKDIR /app
-
-# Copy production-necessary files from the builder stage
+ENV NODE_ENV production
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
-
-# Start the Next.js production server
+EXPOSE 3000
 CMD ["npm", "start"] 
