fix(compose): define network for services

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,4 +37,8 @@ services:
       - backend
       - frontend
     networks:
-      - wizetale-network 
+      - wizetale-network
+
+networks:
+  wizetale-network:
+    driver: bridge 
