--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -3,7 +3,7 @@ server {
     server_name wizetale.com www.wizetale.com;
 
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,7 +30,7 @@ server {
 #     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 #     location / {
-#         proxy_pass http://frontend;
+#         proxy_pass http://frontend:3000;
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
