--- a/wizetale-app/Dockerfile.prod
+++ b/wizetale-app/Dockerfile.prod
@@ -6,10 +6,17 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve the static files with Nginx
-FROM nginx:1.25-alpine
-WORKDIR /usr/share/nginx/html
-COPY --from=builder /app/out .
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"] 
+# Stage 2: Production image
+FROM node:18-alpine
+WORKDIR /app
+
+# Copy the standalone output
+COPY --from=builder /app/.next/standalone ./
+# Copy public and static assets
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next/static ./.next/static
+
+EXPOSE 3000
+ENV PORT 3000
+
+CMD ["node", "server.js"] 
