--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,8 +31,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx-prod.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx-prod.conf.template:/etc/nginx/templates/default.conf.template
       - /etc/letsencrypt:/etc/letsencrypt:ro
+    env_file:
+      - ./wizetale-api/.env
+    command: /bin/sh -c "envsubst < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     depends_on:
       - backend
       - frontend
