--- a/nginx-prod.conf.template
+++ b/nginx-prod.conf.template
@@ -1,6 +1,31 @@
 server {
     listen 80;
     server_name wizetale.com www.wizetale.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name wizetale.com www.wizetale.com;
+
+    ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
+
+    # Include recommended SSL parameters
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_ecdh_curve secp384r1;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets off;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
 
     location / {
         proxy_pass http://frontend:3000;
@@ -16,33 +41,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-API-KEY ${API_KEY};
+        proxy_set_header X-API-KEY '${API_KEY}';
     }
-}
-
-# server {
-#     listen 443 ssl;
-#     server_name wizetale.com www.wizetale.com;
-
-#     ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
-#     include /etc/letsencrypt/options-ssl-nginx.conf;
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-#     location / {
-#         proxy_pass http://frontend:3000;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-
-#     location /api/ {
-#         proxy_pass http://backend:8000/;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-API-KEY ${API_KEY};
-#     }
-# } 
+} 
