--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,42 @@
 version: '3.8'
 
 services:
+  redis:
+    image: redis:alpine
+    container_name: wizetale-redis-prod
+    restart: always
+    networks:
+      - wizetale-network
+
+  celery-worker:
+    build:
+      context: ./wizetale-api
+      dockerfile: Dockerfile
+    image: wizetale-celery-worker-prod
+    container_name: wizetale-celery-worker-prod
+    command: celery -A app.celery_utils.celery worker --loglevel=info
+    restart: always
+    env_file:
+      - ./wizetale-api/.env
+    depends_on:
+      - redis
+      - backend
+    networks:
+      - wizetale-network
+
+  celery-flower:
+    image: mher/flower:2.0
+    container_name: wizetale-flower-prod
+    command: celery -A app.celery_utils.celery flower --broker=redis://redis:6379/0 --port=5555
+    restart: always
+    ports:
+      - "5555:5555"
+    depends_on:
+      - redis
+      - celery-worker
+    networks:
+      - wizetale-network
+
   backend:
     build:
       context: ./wizetale-api
@@ -12,6 +48,28 @@ services:
       - ./wizetale-api/.env
     networks:
       - wizetale-network
+    depends_on:
+      - redis
+
+  worker:
+    build:
+      context: ./wizetale-api
+      dockerfile: Dockerfile
+    image: wizetale-worker-prod
+    container_name: wizetale-worker-prod
+    restart: always
+    command: ["celery", "-A", "app.celery_utils.celery_app", "worker", "--loglevel=info"]
+    env_file:
+      - ./wizetale-api/.env
+    volumes:
+      - ./wizetale-api/generated_videos:/app/generated_videos
+      - ./wizetale-api/generated_images:/app/generated_images
+      - ./wizetale-api/generated_audio:/app/generated_audio
+    networks:
+      - wizetale-network
+    depends_on:
+      - redis
+      - backend
 
   frontend:
     build:
@@ -20,6 +78,8 @@ services:
     image: wizetale-frontend-prod
     container_name: wizetale-frontend-prod
     restart: always
+    environment:
+      - NEXT_PUBLIC_API_URL=https://api.wizetale.com
     networks:
       - wizetale-network
 
@@ -31,14 +91,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx-prod.conf.template:/etc/nginx/templates/default.conf.template
+      - ./nginx-prod.conf.template:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt:ro
-    env_file:
-      - ./wizetale-api/.env
-    command: /bin/sh -c "envsubst < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     depends_on:
-      - backend
       - frontend
+      - backend
     networks:
       - wizetale-network
 
