fix: Pass API key to frontend during build

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,6 +75,8 @@ services:
     build:
       context: ./wizetale-app
       dockerfile: Dockerfile.prod
+      args:
+        NEXT_PUBLIC_API_KEY: ${API_KEY}
     image: wizetale-frontend-prod
     container_name: wizetale-frontend-prod
     restart: always
