--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -93,11 +93,15 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx-prod.conf.template:/etc/nginx/conf.d/default.conf
+      - ./nginx-prod.conf.template:/etc/nginx/templates/default.conf.template
       - /etc/letsencrypt:/etc/letsencrypt:ro
+    environment:
+      - API_KEY=${API_KEY}
+      - NGINX_HOST=wizetale.com
+    command: /bin/sh -c 'envsubst "$${API_KEY},$${NGINX_HOST}" < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g "daemon off;"'
     depends_on:
-      - frontend
       - backend
+      - frontend
     networks:
       - wizetale-network
 
