--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx-prod.conf.template:/etc/nginx/templates/default.conf.template
+      - ./nginx.conf:/etc/nginx/templates/default.conf.template
       - /etc/letsencrypt:/etc/letsencrypt:ro
     environment:
       - API_KEY=${API_KEY}
