--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,22 @@
 server {
     listen 80;
-    server_name wizetale.com www.wizetale.com;
-    return 301 https://$host$request_uri;
+    server_name ${NGINX_HOST} www.${NGINX_HOST};
+
+    # Redirect all HTTP requests to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
     listen 443 ssl http2;
-    server_name wizetale.com www.wizetale.com;
+    server_name ${NGINX_HOST} www.${NGINX_HOST};
 
-    ssl_certificate /etc/letsencrypt/live/wizetale.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/wizetale.com/privkey.pem;
+    # SSL Certificate paths using environment variable
+    ssl_certificate /etc/letsencrypt/live/${NGINX_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${NGINX_HOST}/privkey.pem;
 
-    # Include recommended SSL parameters
+    # Recommended SSL parameters
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
@@ -22,11 +27,14 @@ server {
     ssl_stapling_verify on;
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
+    
+    # Security Headers
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
+    # Proxy to Frontend
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
@@ -35,12 +43,13 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Proxy to Backend API
     location /api/ {
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-API-KEY ${API_KEY};
+        proxy_set_header X-API-KEY '${API_KEY}';
     }
 } 
