--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
     environment:
       - API_KEY=${API_KEY}
       - NGINX_HOST=wizetale.com
-    command: /bin/sh -c 'envsubst "$${API_KEY},$${NGINX_HOST}" < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g "daemon off;"'
+    command: /bin/sh -c 'envsubst ''$${API_KEY},$${NGINX_HOST}'' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g "daemon off;"'
     depends_on:
       - backend
       - frontend
