--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name ${NGINX_HOST} www.${NGINX_HOST};
 
     # SSL Certificate paths using environment variable
