--- a/nginx.conf
+++ b/nginx.conf
@@ -1,56 +1,44 @@
-server {
-    listen 80;
-    server_name ${NGINX_HOST} www.${NGINX_HOST};
+worker_processes 1;
 
-    # Redirect all HTTP requests to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
+events {
+  worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    http2 on;
-    server_name ${NGINX_HOST} www.${NGINX_HOST};
+http {
+  sendfile on;
 
-    # SSL Certificate paths using environment variable
-    ssl_certificate /etc/letsencrypt/live/${NGINX_HOST}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${NGINX_HOST}/privkey.pem;
+  upstream api {
+    server api:8000;
+  }
 
-    # Recommended SSL parameters
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-    ssl_ecdh_curve secp384r1;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_tickets off;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
-    
-    # Security Headers
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
+  upstream frontend {
+    server frontend:3000;
+  }
 
-    # Proxy to Frontend
+  server {
+    listen 80;
+    # server_name your_domain.com www.your_domain.com; # Replace with your domain
+
+    # This is for certbot certificate validation
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+
     location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_pass http://frontend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy to Backend API
     location /api/ {
-        proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-API-KEY '${API_KEY}';
+      proxy_pass http://api/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-API-KEY ${API_KEY};
     }
+  }
 } 
