--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
     add_header X-XSS-Protection "1; mode=block";
 
     location /api/ {
-      proxy_pass http://api/;
+      proxy_pass http://api:8000$request_uri;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
