--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - postgres
     restart: unless-stopped
     environment:
+      - RUNWARE_API_KEY=Tr78HtnWmM1OtFhMROf9MQJBViFHcYgY
       - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
