fix: restore API_KEY variable and create custom entrypoint for envsubst

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,8 @@
 FROM nginx:latest
-COPY nginx.conf /etc/nginx/nginx.conf
-# Отключаем автоматические скрипты entrypoint'а
-RUN rm -rf /docker-entrypoint.d/20-envsubst-on-templates.sh 
+COPY nginx.conf /etc/nginx/nginx.conf.template
+# Создаем кастомный entrypoint скрипт
+RUN echo '#!/bin/sh' > /docker-entrypoint-custom.sh && \
+    echo 'envsubst '"'"'${API_KEY}'"'"' < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf' >> /docker-entrypoint-custom.sh && \
+    echo 'exec nginx -g "daemon off;"' >> /docker-entrypoint-custom.sh && \
+    chmod +x /docker-entrypoint-custom.sh
+CMD ["/docker-entrypoint-custom.sh"] 
