feat: add serving for generated files - mount directories in API and configure nginx proxy

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -72,6 +72,33 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Проксируем /generated_videos/ на FastAPI
+    location /generated_videos/ {
+      proxy_pass http://api/generated_videos/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Проксируем /generated_audio/ на FastAPI
+    location /generated_audio/ {
+      proxy_pass http://api/generated_audio/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Проксируем /generated_images/ на FastAPI
+    location /generated_images/ {
+      proxy_pass http://api/generated_images/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
       proxy_pass http://frontend;
       proxy_set_header Host $host;
