--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,52 @@
-worker_processes 1;
+worker_processes auto;
+worker_rlimit_nofile 65535;
 
 events {
-  worker_connections 1024;
+  worker_connections 4096;
+  use epoll;
+  multi_accept on;
 }
 
 http {
   sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  keepalive_timeout 65;
+  types_hash_max_size 2048;
+  client_max_body_size 100M;
+  
+  # Gzip compression
+  gzip on;
+  gzip_vary on;
+  gzip_min_length 1024;
+  gzip_proxied any;
+  gzip_comp_level 6;
+  gzip_types
+    text/plain
+    text/css
+    text/xml
+    text/javascript
+    application/json
+    application/javascript
+    application/xml+rss
+    application/atom+xml
+    image/svg+xml;
   
   # Add resolver for Docker DNS
   resolver 127.0.0.11 valid=30s;
 
+  # Rate limiting
+  limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+  limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
+
   upstream api {
     server api:8000;
+    keepalive 32;
   }
 
   upstream frontend {
     server frontend:3000;
+    keepalive 32;
   }
 
   server {
@@ -50,61 +81,79 @@ http {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
+    # API endpoints with rate limiting
     location /api/ {
+      limit_req zone=api burst=20 nodelay;
       proxy_pass http://api$request_uri;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-API-KEY ${API_KEY};
       proxy_connect_timeout 600;
       proxy_send_timeout 600;
       proxy_read_timeout 600;
       send_timeout 600;
+      proxy_buffering on;
+      proxy_buffer_size 4k;
+      proxy_buffers 8 4k;
     }
 
-    # Проксируем /static/ на FastAPI
+    # Static files with caching
     location /static/ {
       proxy_pass http://api/static/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
     }
 
-    # Проксируем /generated_videos/ на FastAPI
+    # Generated videos with caching
     location /generated_videos/ {
       proxy_pass http://api/generated_videos/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
     }
 
-    # Проксируем /generated_audio/ на FastAPI
+    # Generated audio with caching
     location /generated_audio/ {
       proxy_pass http://api/generated_audio/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
     }
 
-    # Проксируем /generated_images/ на FastAPI
+    # Generated images with caching
     location /generated_images/ {
       proxy_pass http://api/generated_images/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
     }
 
+    # Frontend with rate limiting
     location / {
+      limit_req zone=general burst=50 nodelay;
       proxy_pass http://frontend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_buffering on;
+      proxy_buffer_size 4k;
+      proxy_buffers 8 4k;
     }
   }
 } 
