Add specific nginx rule for favicon and logo files

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -204,6 +204,18 @@ http {
       add_header Vary Accept-Encoding;
     }
 
+    # Favicon and logo files
+    location ~* ^/(favicon\.png|wisetale-logo\.png|placeholder.*\.(png|jpg|svg))$ {
+      proxy_pass http://frontend_backend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      expires 1y;
+      add_header Cache-Control "public, immutable";
+      add_header Vary Accept-Encoding;
+    }
+
     # Public static files (favicon, logos, etc.)
     location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|css|js)$ {
       proxy_pass http://frontend_backend;
