Fix nginx rule for static files - proxy to public folder

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -204,9 +204,9 @@ http {
       add_header Vary Accept-Encoding;
     }
 
-    # Favicon and logo files
+    # Static files from Next.js public folder
     location ~* ^/(favicon\.png|wisetale-logo\.png|placeholder.*\.(png|jpg|svg))$ {
-      proxy_pass http://frontend_backend;
+      proxy_pass http://frontend_backend/public$request_uri;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
