Fix nginx root path for static files

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -206,8 +206,8 @@ http {
 
     # Static files from Next.js public folder - serve directly
     location ~* ^/(favicon\.png|wisetale-logo\.png|placeholder.*\.(png|jpg|svg))$ {
-      root /var/www/public;
-      try_files $uri =404;
+      root /var/www;
+      try_files /public$uri =404;
       expires 1y;
       add_header Cache-Control "public, immutable";
       add_header Vary Accept-Encoding;
