--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
+    networks:
+      - webnet
 
   # PostgreSQL service
   postgres:
@@ -24,6 +26,8 @@ services:
     restart: unless-stopped
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - webnet
 
   # API service
   api:
@@ -52,8 +56,8 @@ services:
       - ./wizetale-api/generated_audio:/app/generated_audio
       - ./wizetale-api/generated_images:/app/generated_images
       - ./wizetale-api/generated_videos:/app/generated_videos
-    # volumes:
-    #   - ./wizetale-api:/app
+    networks:
+      - webnet
 
   # Second API service for load balancing
   api2:
@@ -81,6 +85,8 @@ services:
       - ./wizetale-api/generated_audio:/app/generated_audio
       - ./wizetale-api/generated_images:/app/generated_images
       - ./wizetale-api/generated_videos:/app/generated_videos
+    networks:
+      - webnet
 
   # Third API service for additional load balancing
   api3:
@@ -108,15 +114,16 @@ services:
       - ./wizetale-api/generated_audio:/app/generated_audio
       - ./wizetale-api/generated_images:/app/generated_images
       - ./wizetale-api/generated_videos:/app/generated_videos
+    networks:
+      - webnet
 
-  # Celery worker service  
+  # Celery worker service
   celery-worker:
     build:
       context: ./wizetale-api
       dockerfile: Dockerfile
     image: wizetale-celery-worker
     container_name: wizetale-celery-worker
-    # Используем worker.py как точку входа для Celery
     command: celery -A worker.celery_app worker --loglevel=info --concurrency=2
     depends_on:
       - redis
@@ -134,6 +141,8 @@ services:
       - ./wizetale-api/generated_audio:/app/generated_audio
       - ./wizetale-api/generated_images:/app/generated_images
       - ./wizetale-api/generated_videos:/app/generated_videos
+    networks:
+      - webnet
 
   # Second Celery worker for increased processing capacity
   celery-worker-2:
@@ -159,6 +168,8 @@ services:
       - ./wizetale-api/generated_audio:/app/generated_audio
       - ./wizetale-api/generated_images:/app/generated_images
       - ./wizetale-api/generated_videos:/app/generated_videos
+    networks:
+      - webnet
 
   # Third Celery worker for maximum processing capacity
   celery-worker-3:
@@ -184,12 +195,16 @@ services:
       - ./wizetale-api/generated_audio:/app/generated_audio
       - ./wizetale-api/generated_images:/app/generated_images
       - ./wizetale-api/generated_videos:/app/generated_videos
+    networks:
+      - webnet
 
   # Frontend service
   frontend:
+    ports:
+      - "3000:3000"
     build:
       context: ./wizetale-app
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
       args:
         NEXT_PUBLIC_FIREBASE_API_KEY: ${NEXT_PUBLIC_FIREBASE_API_KEY}
         NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN}
@@ -197,11 +212,15 @@ services:
         NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET}
         NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID}
         NEXT_PUBLIC_FIREBASE_APP_ID: ${NEXT_PUBLIC_FIREBASE_APP_ID}
+        NEXT_PUBLIC_API_KEY: ${NEXT_PUBLIC_API_KEY}
+        NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID}
     image: wizetale-frontend
     container_name: wisetale-frontend
     restart: always
     depends_on:
       - api
+    networks:
+      - webnet
 
   nginx:
     container_name: wisetale-nginx
@@ -219,6 +238,8 @@ services:
     depends_on:
       - api
       - frontend
+    networks:
+      - webnet
 
   certbot:
     image: certbot/certbot
@@ -232,3 +253,7 @@ volumes:
   redis_data:
   postgres_data:
   static_files:
+
+networks:
+  webnet:
+    driver: bridge
